<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_favorites"
        android:orderInCategory="100"
        android:title="@string/toolbar_favorites"
        app:showAsAction="never"/>

    <item android:id="@+id/action_search"
          android:title="@string/toolbar_search"
          android:icon="@android:drawable/ic_menu_search"
          app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_OnlineList"
        android:orderInCategory="100"
        android:title="@string/onlinelist"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:icon="@android:drawable/ic_menu_set_as"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

</menu>
