<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegristerActivity">

    <EditText
        android:id="@+id/editText_regrister_username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/rounded_edittext_regrister_login"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/editText_regrister_email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext_regrister_login"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editText_regrister_username"
        app:layout_constraintStart_toStartOf="@+id/editText_regrister_username"
        app:layout_constraintTop_toBottomOf="@+id/editText_regrister_username"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/editText_regrister_password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext_regrister_login"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editText_regrister_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_regrister_email"
        app:layout_constraintTop_toBottomOf="@+id/editText_regrister_email"
        tools:ignore="Autofill,RtlSymmetry" />

    <Button
        android:id="@+id/btn_regrister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/regrister"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_regrister_password" />

    <TextView
        android:id="@+id/textView_regrister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/go_to_login"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_regrister" />



</androidx.constraintlayout.widget.ConstraintLayout>