<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/colorPrimary"
                                                   tools:context=".LoginActivity"
                                                   tools:ignore="ExtraText">


    <EditText
            android:id="@+id/editText_login_email"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext_regrister_login"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill,RtlSymmetry,TextFields" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="48dp"/>

    <EditText
            android:id="@+id/editText_login_password"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext_regrister_login"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="@+id/editText_login_email"
            app:layout_constraintStart_toStartOf="@+id/editText_login_email"
            app:layout_constraintTop_toBottomOf="@+id/editText_login_email"
            tools:ignore="Autofill,RtlSymmetry"/>

    <Button
            android:id="@+id/btn_login_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/login"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_login_password"/>

    <TextView
            android:id="@+id/textView_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/back_to_regrister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_login"/>
    <TextView
            android:text="Marvellisimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="32dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="128dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>